--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3dss_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3dss_gamma_scopes.ltx
@@ -75,38 +75,38 @@
 	s3ds_exit_pupil		= 0.33	
 	s3ds_image_type 	= 2
 	s3ds_reticle_type	= 7	
-	magnifications = 3.7
+	magnifications 		= 3.7
 
 ![1p29]	--4x
-	s3ds_reticle_size 	= 3.7
+	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2.7
 	s3ds_exit_pupil		= 0.24
 	s3ds_reticle_type  	= 2
 	ms_count            = 2
     ms_colors           = scope_black, scope_green 
-	magnifications = 4	
+	magnifications 		= 4	
 	
 ![usp1] --1P29, 4x
-	s3ds_reticle_size 	= 3.7
+	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2.7
 	s3ds_exit_pupil		= 0.24
 	s3ds_reticle_type  	= 2
 	ms_count            = 2
     ms_colors           = scope_black, scope_green 
-	magnifications = 4	
+	magnifications 		= 4	
 	
 ![ps01]	--4x
 	s3ds_reticle_size 	= 3.9
-	s3ds_eye_relief 	= 4
-	s3ds_exit_pupil		= 0.34	
+	s3ds_eye_relief 	= 2.2
+	s3ds_exit_pupil		= 0.6	
 	s3ds_reticle_type 	= 1	
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
 	magnifications 		= 4
 		
 ![pso2]	--4x
-	s3ds_reticle_size 	= 4
-	s3ds_eye_relief 	= 2
+	s3ds_reticle_size 	= 4.1
+	s3ds_eye_relief 	= 2.2
 	s3ds_exit_pupil		= 0.5	
 	s3ds_reticle_type 	= 1
 	ms_count 			= 2
@@ -204,9 +204,9 @@
 	s3ds_dirt_intensity = 0.1
 	s3ds_eye_relief     = 3
 	s3ds_image_type     = 3
-	s3ds_reticle_size   = 2.9
+	s3ds_reticle_size   = 0.9
 	s3ds_reticle_type   = 8
-	magnifications 		= 1-2
+	magnifications 		= 1,2
 	
 ![monstrum]	--2x
 	s3ds_reticle_size 	= 3
@@ -218,39 +218,39 @@
 	magnifications 		= 2
 	
 ![acog]		--2.8x
-	s3ds_reticle_size 	= 3.9
-	s3ds_eye_relief 	= 1.5
+	s3ds_reticle_size 	= 4.2
+	s3ds_eye_relief 	= 1.7
 	s3ds_exit_pupil		= 0.6
-	s3ds_chroma_power	= 0.031	
+	s3ds_chroma_power	= 0.02	
 	s3ds_reticle_type 	= 0
-	magnifications = 2.8	
+	magnifications 		= 2.8	
 	
 ![triji]	--acog, 2.8x
-	s3ds_reticle_size 	= 3.9
-	s3ds_eye_relief 	= 1.5
-	s3ds_exit_pupil		= 0.6	
-	s3ds_chroma_power	= 0.031		
+	s3ds_reticle_size 	= 4.2
+	s3ds_eye_relief 	= 1.7
+	s3ds_exit_pupil		= 0.6
+	s3ds_chroma_power	= 0.02	
 	s3ds_reticle_type 	= 0
 	magnifications 		= 2.8	
 
 ![trihawk]	--3x
 	s3ds_reticle_size 	= 3.2
-	s3ds_eye_relief 	= 2
-	s3ds_exit_pupil		= 0.66
-	s3ds_chroma_power	= 0.028
+	s3ds_eye_relief 	= 2.2
+	s3ds_exit_pupil		= 0.7
+	s3ds_chroma_power	= 0.02
 	magnifications 		= 3
 	
 ![gee36]	--3x
 	s3ds_reticle_size 	= 3.2
 	s3ds_eye_relief 	= 2
-	s3ds_exit_pupil		= 0.65	
+	s3ds_exit_pupil		= 0.75	
 	magnifications 		= 3
 
-![c79]	--3x
-	s3ds_reticle_size 	= 6
-	s3ds_eye_relief 	= 2
-	s3ds_exit_pupil		= 0.6	
-	magnifications 		= 3
+![c79]	--3.5x
+	s3ds_reticle_size 	= 3.6
+	s3ds_eye_relief 	= 2.3
+	s3ds_exit_pupil		= 0.65
+	magnifications 		= 3.5
 	
 ![side]	--3.5x
 	s3ds_chroma_power   = 0.1
@@ -259,9 +259,9 @@
 	magnifications 		= 3.5
 
 ![vulcan] --NVG, 3.5x
-	s3ds_reticle_size 	= 3	
+	s3ds_reticle_size 	= 3.4
 	s3ds_eye_relief 	= 2
-	s3ds_exit_pupil		= 0.6	
+	s3ds_exit_pupil		= 0.65	
 	s3ds_chroma_power	= 0.05	
 	s3ds_image_type 	= 1
 	s3ds_reticle_type	= 7
@@ -269,13 +269,13 @@
 	magnifications 		= 3.5
 	
 ![susat]	--4x
-	s3ds_reticle_size 	= 3.7
-	s3ds_eye_relief 	= 2.35
+	s3ds_reticle_size 	= 4.1
+	s3ds_eye_relief 	= 2.6
 	magnifications		= 4
 
 ![susatov]	--4x, l85 sight
-	s3ds_reticle_size 	= 3.7
-	s3ds_eye_relief 	= 2.35
+	s3ds_reticle_size 	= 4.1
+	s3ds_eye_relief 	= 2.6
 	magnifications		= 4
 	
 ![bravo4]	--4x
@@ -329,20 +329,19 @@
 	magnifications 		= 4
 	
 ![uh1_magd] --6x
-	s3ds_reticle_size 	= 3.9
-	s3ds_eye_relief 	= 2.4
+	s3ds_reticle_size 	= 4
+	s3ds_eye_relief 	= 2.5
 	s3ds_chroma_power	= 0	
-	s3ds_reticle_type	= 7		
+	;s3ds_reticle_type	= 7		
 	magnifications 		= 6
 
-![e0t2_magd]	--6x	
-	s3ds_reticle_size 	= 3.9
-	s3ds_eye_relief 	= 2.4
+![e0t2_magd]	--3x	
+	s3ds_reticle_size 	= 4
+	s3ds_eye_relief 	= 2.5
 	s3ds_chroma_power	= 0
-	s3ds_reticle_type	= 1	
-	ms_count 			= 2
-	ms_colors 			= scope_red, scope_green		
-	magnifications		= 6
+	ms_count 			= 6
+	;ms_colors 			= scope_red, scope_green		
+	magnifications		= 3
 
 ![devo]	--1x/6x
 	s3ds_reticle_size 	= 4.6
