--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_ak12_m1.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_ak12_m1.ltx
@@ -41,10 +41,10 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_ak12_m1_ekp8_18]
 1icon_layer		= ekp8_18_x	
 ![wpn_ak12_m1_ekp8_18_hud]
-        aim_hud_offset_pos               = -0.058246, -0.014372, -0.082329
-        aim_hud_offset_pos_16x9          = -0.058246, -0.014372, -0.082329
-        aim_hud_offset_rot               = -0.005507, 0.001741, 0.018
-        aim_hud_offset_rot_16x9          = -0.005507, 0.001741, 0.018
+        aim_hud_offset_pos               = -0.058558, -0.015722, -0.082329
+        aim_hud_offset_pos_16x9          = -0.058558, -0.015722, -0.082329
+        aim_hud_offset_rot               = -0.007804, 0.001725, 0.018
+        aim_hud_offset_rot_16x9          = -0.007804, 0.001725, 0.018
 
 ![wpn_ak12_m1_e0t2]
 1icon_layer		= e0t2_x
@@ -163,24 +163,26 @@ item_visual                		= dynamics\weapons\wpn_ak12_m1\wpn_ak12_m1_romeo8_h
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_ak12_m1_acog_hud]
-        aim_hud_offset_pos               = -0.057392, -0.007878, -0.068634
-        aim_hud_offset_pos_16x9          = -0.057392, -0.007878, -0.068634
-        aim_hud_offset_rot               = 0.015837, -0.002973, 0.008665
-        aim_hud_offset_rot_16x9          = 0.015837, -0.002973, 0.008665
+        aim_hud_offset_pos               = -0.057392, -0.008076, -0.067438
+        aim_hud_offset_pos_16x9          = -0.057392, -0.008076, -0.067438
+        aim_hud_offset_rot               = 0.016035, -0.003232, 0.008665
+        aim_hud_offset_rot_16x9          = 0.016035, -0.003232, 0.008665
 		
 ![wpn_ak12_m1_triji]
+inv_grid_x         = 158
+inv_grid_y         = 18
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_ak12_m1_triji_hud]
-        aim_hud_offset_alt_pos           = -0.082752, -0.040318, -0.058738
-        aim_hud_offset_alt_pos_16x9      = -0.082752, -0.040318, -0.058738
-        aim_hud_offset_alt_rot           = 0.028527, 0.009985, 0.7
-        aim_hud_offset_alt_rot_16x9      = 0.028527, 0.009985, 0.7
+        aim_hud_offset_alt_pos           = -0.072209, -0.050305, -0.058738
+        aim_hud_offset_alt_pos_16x9      = -0.072209, -0.050305, -0.058738
+        aim_hud_offset_alt_rot           = 0.005358, 0.001686, 0.7
+        aim_hud_offset_alt_rot_16x9      = 0.005358, 0.001686, 0.7
 		
-        aim_hud_offset_pos               = -0.057392, -0.007878, -0.068634
-        aim_hud_offset_pos_16x9          = -0.057392, -0.007878, -0.068634
-        aim_hud_offset_rot               = 0.015837, -0.002973, 0.008665
-        aim_hud_offset_rot_16x9          = 0.015837, -0.002973, 0.008665
+        aim_hud_offset_pos               = -0.057392, -0.008076, -0.067438
+        aim_hud_offset_pos_16x9          = -0.057392, -0.008076, -0.067438
+        aim_hud_offset_rot               = 0.016035, -0.003232, 0.008665
+        aim_hud_offset_rot_16x9          = 0.016035, -0.003232, 0.008665
 		
 ![wpn_ak12_m1_specter]
 1icon_layer		= specter_x
@@ -199,14 +201,16 @@ item_visual                		= dynamics\weapons\wpn_ak12_m1\wpn_ak12_m1_romeo8_h
         aim_hud_offset_rot_16x9          = 0.009887, -0.003203, 0.008665
 		
 ![wpn_ak12_m1_spec_alt]
+inv_grid_x         = 158
+inv_grid_y         = 16
 		zoom_step_count					 = 1
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_ak12_m1_spec_alt_hud]
-        aim_hud_offset_alt_pos           = -0.082752, -0.040318, -0.058738
-        aim_hud_offset_alt_pos_16x9      = -0.082752, -0.040318, -0.058738
-        aim_hud_offset_alt_rot           = 0.028527, 0.009985, 0.7
-        aim_hud_offset_alt_rot_16x9      = 0.028527, 0.009985, 0.7
+        aim_hud_offset_alt_pos           = -0.072209, -0.050305, -0.058738
+        aim_hud_offset_alt_pos_16x9      = -0.072209, -0.050305, -0.058738
+        aim_hud_offset_alt_rot           = 0.005358, 0.001686, 0.7
+        aim_hud_offset_alt_rot_16x9      = 0.005358, 0.001686, 0.7
 		
         aim_hud_offset_pos               = -0.05722, -0.006418, -0.082276
         aim_hud_offset_pos_16x9          = -0.05722, -0.006418, -0.082276
@@ -220,8 +224,8 @@ item_visual                		= dynamics\weapons\wpn_ak12_m1\wpn_ak12_m1_romeo8_h
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_ak12_m1_leupold_hud]
-        aim_hud_offset_pos               = -0.059643, 0.004374, -0.028003
-        aim_hud_offset_pos_16x9          = -0.059643, 0.004374, -0.028003
+        aim_hud_offset_pos               = -0.059643, 0.004374, -0.022536
+        aim_hud_offset_pos_16x9          = -0.059643, 0.004374, -0.022536
         aim_hud_offset_rot               = 0.033198, 0.005793, 0.008665
         aim_hud_offset_rot_16x9          = 0.033198, 0.005793, 0.008665
 		
@@ -234,8 +238,10 @@ item_visual                		= dynamics\weapons\wpn_ak12_m1\wpn_ak12_m1_romeo8_h
         aim_hud_offset_alt_rot           = 0.028527, 0.009985, 0.7
         aim_hud_offset_alt_rot_16x9      = 0.028527, 0.009985, 0.7
 		
-        aim_hud_offset_alt_pos           = -0.09226, -0.023465, -0.058738
-        aim_hud_offset_alt_pos_16x9      = -0.09226, -0.023465, -0.058738
+        aim_hud_offset_pos               = -0.059643, 0.004374, -0.022536
+        aim_hud_offset_pos_16x9          = -0.059643, 0.004374, -0.022536
+        aim_hud_offset_rot               = 0.033198, 0.005793, 0.008665
+        aim_hud_offset_rot_16x9          = 0.033198, 0.005793, 0.008665
 		
 ![wpn_ak12_m1_pn23]
 1icon_layer		= pn23_x
@@ -284,7 +290,6 @@ item_visual                		= dynamics\weapons\wpn_ak12_m1\wpn_ak12_m1_romeo8_h
         scope_status                = 1
         scope_dynamic_zoom          = off
         scope_zoom_factor           = 40
-        scope_texture               =
 	
 [wpn_ak12_m1_gee36_hud]:wpn_ak12_m1_hud
 item_visual                              = dynamics\weapons\wpn_ak12_m1\wpn_ak12_m1_gee36_hud.ogf
