--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_aug_a3_custom_bas.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_aug_a3_custom_bas.ltx
@@ -3,10 +3,10 @@
 parent_section							 = wpn_aug_a3_custom_bas
 >scopes                                  = uh2
 
-	s3ds_reticle_size 	= 3.9
-	s3ds_eye_relief 	= 2.4
+	s3ds_reticle_size 	= 4
+	s3ds_eye_relief 	= 2.5
 	s3ds_chroma_power	= 0	
-	s3ds_reticle_type	= 7		
+	;s3ds_reticle_type	= 7		
 	magnifications 		= 6
 	
         scope_zoom_factor                = 20
