--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_svds_pmc.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_svds_pmc.ltx
@@ -17,8 +17,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_svds_pmc_acog_hud]
-        aim_hud_offset_alt_pos           = -0.094524, -0.072042, -0.1
-        aim_hud_offset_alt_pos_16x9      = -0.094524, -0.072042, -0.1
+        aim_hud_offset_alt_pos           = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_pos_16x9      = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_rot           = -0.009469, 0.001838, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.009469, 0.001838, 0.78
 		
         aim_hud_offset_pos               = -0.075067, 0.007721, -0.137474
         aim_hud_offset_pos_16x9          = -0.075067, 0.007721, -0.137474
@@ -31,11 +33,13 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_svds_pmc_leupold_hud]
-        aim_hud_offset_alt_pos           = -0.094524, -0.072042, -0.1
-        aim_hud_offset_alt_pos_16x9      = -0.094524, -0.072042, -0.1
+        aim_hud_offset_alt_pos           = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_pos_16x9      = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_rot           = -0.009469, 0.001838, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.009469, 0.001838, 0.78
 		
-        aim_hud_offset_pos               = -0.074972, 0.003386, -0.094316
-        aim_hud_offset_pos_16x9          = -0.074972, 0.003386, -0.094316
+        aim_hud_offset_pos               = -0.074972, 0.003386, -0.086719
+        aim_hud_offset_pos_16x9          = -0.074972, 0.003386, -0.086719
         aim_hud_offset_rot               = -0.004318, -0.003725, 0
         aim_hud_offset_rot_16x9          = -0.004318, -0.003725, 0
 		
@@ -46,8 +50,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_texture                    =
 		zoom_step_count					 = 1
 ![wpn_svds_pmc_specter_hud]
-        aim_hud_offset_alt_pos           = -0.094524, -0.072042, -0.1
-        aim_hud_offset_alt_pos_16x9      = -0.094524, -0.072042, -0.1
+        aim_hud_offset_alt_pos           = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_pos_16x9      = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_rot           = -0.009469, 0.001838, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.009469, 0.001838, 0.78
 		
         aim_hud_offset_pos               = -0.074934, 0.005197, -0.153331
         aim_hud_offset_pos_16x9          = -0.074934, 0.005197, -0.153331
@@ -60,21 +66,26 @@ lewd_lens_hide_aim_mode      = true, false, false
 		min_scope_zoom_factor			 = 40
         scope_texture                    =
 ![wpn_svds_pmc_marchf_hud]
-        aim_hud_offset_alt_pos           = -0.094524, -0.072042, -0.1
-        aim_hud_offset_alt_pos_16x9      = -0.094524, -0.072042, -0.1
+        aim_hud_offset_alt_pos           = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_pos_16x9      = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_rot           = -0.009469, 0.001838, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.009469, 0.001838, 0.78
 		
-        aim_hud_offset_pos               = -0.0747, 0.005821, -0.093987
-        aim_hud_offset_pos_16x9          = -0.0747, 0.005821, -0.093987
-        aim_hud_offset_rot               = -0.004499, -0.003256, 0
-        aim_hud_offset_rot_16x9          = -0.004499, -0.003256, 0
+        aim_hud_offset_pos               = -0.0747, 0.005821, -0.083606
+        aim_hud_offset_pos_16x9          = -0.0747, 0.005821, -0.083606
+        aim_hud_offset_rot               = -0.004913, -0.003594, 0
+        aim_hud_offset_rot_16x9          = -0.004913, -0.003594, 0
 		
 ![wpn_svds_pmc_susat]
 1icon_layer		= susat_x
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_svds_pmc_susat_hud]	
-        aim_hud_offset_alt_pos           = -0.094524, -0.072042, -0.1
-        aim_hud_offset_alt_pos_16x9      = -0.094524, -0.072042, -0.1	
+        aim_hud_offset_alt_pos           = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_pos_16x9      = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_rot           = -0.009469, 0.001838, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.009469, 0.001838, 0.78
+		
         aim_hud_offset_pos               = -0.074803, -0.005403, -0.152318
         aim_hud_offset_pos_16x9          = -0.074803, -0.005403, -0.152318
         aim_hud_offset_rot               = -0.005257, -0.003557, 0
@@ -86,8 +97,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 12
         scope_texture                    =
 ![wpn_svds_pmc_gauss_sight_hud]	
-        aim_hud_offset_alt_pos           = -0.094524, -0.072042, -0.1
-        aim_hud_offset_alt_pos_16x9      = -0.094524, -0.072042, -0.1	
+        aim_hud_offset_alt_pos           = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_pos_16x9      = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_rot           = -0.009469, 0.001838, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.009469, 0.001838, 0.78	
 		
         aim_hud_offset_pos               = -0.074742, 0.007826, -0.180424
         aim_hud_offset_pos_16x9          = -0.074742, 0.007826, -0.180424
@@ -102,8 +115,11 @@ lewd_lens_hide_aim_mode      = true, false, false
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on		
 ![wpn_svds_pmc_pn23_hud]
-        aim_hud_offset_alt_pos           = -0.094524, -0.072042, -0.1
-        aim_hud_offset_alt_pos_16x9      = -0.094524, -0.072042, -0.1
+        aim_hud_offset_alt_pos           = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_pos_16x9      = -0.090076, -0.062947, -0.117497
+        aim_hud_offset_alt_rot           = -0.009469, 0.001838, 0.78
+        aim_hud_offset_alt_rot_16x9      = -0.009469, 0.001838, 0.78
+		
         aim_hud_offset_pos               = -0.074812, -0.005266, -0.075272
         aim_hud_offset_pos_16x9          = -0.074812, -0.005266, -0.075272
         aim_hud_offset_rot               = -0.004807, -0.00401, 0
@@ -127,7 +143,7 @@ scope_dynamic_zoom      = off
 
 [wpn_svds_pmc_gee36_hud]:wpn_svds_pmc_hud
 item_visual                              = dynamics\weapons\wpn_svds_pmc\wpn_svds_pmc_gee36_hud.ogf	
-        aim_hud_offset_pos               = -0.074595, 0.00399, -0.195655
-        aim_hud_offset_pos_16x9          = -0.074595, 0.00399, -0.195655
-        aim_hud_offset_rot               = -0.004315, -0.003782, 0
-        aim_hud_offset_rot_16x9          = -0.004315, -0.003782, 0
+        aim_hud_offset_pos               = -0.074738, 0.00426, -0.175755
+        aim_hud_offset_pos_16x9          = -0.074738, 0.00426, -0.175755
+        aim_hud_offset_rot               = -0.004207, -0.003704, 0
+        aim_hud_offset_rot_16x9          = -0.004207, -0.003704, 0
