--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_svu.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_svu.ltx
@@ -128,6 +128,7 @@ item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_pka_hud.ogf
         aim_hud_offset_rot               = 0.0698, 0.033108, -0.018
         aim_hud_offset_rot_16x9          = 0.0698, 0.033108, -0.018
 
+[wpn_svu_usp1]:wpn_svu_1p29
 ;---------------------------------------------------------------------------------------------------
 [wpn_svu_1p78gs]:wpn_svu
 hud                                      = wpn_svu_1p78gs_hud
@@ -250,3 +251,4 @@ item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_pso1m21_hud.ogf
         aim_hud_offset_rot               = 0.069651, 0.032824, -0.025
         aim_hud_offset_rot_16x9          = 0.069651, 0.032824, -0.025	
 
+;
