--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_svu_nimble.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_svu_nimble.ltx
@@ -1,12 +1,116 @@
 ![wpn_svu_nimble]
+>scopes                      = ekp8_02, okp, pka, 1p63, 1p76, pso2, pso1m21, 1pn93n2_1gs, 1pn93, usp1, 1p78gs, 1p59
+rpm                          = 140
+
 lewd_lens_hide_enabled       = true	
 lewd_lens_hide_bone          = scope
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
+![wpn_svu_nimble_hud]
+anm_idle_aim                             = barry_idle_aim_svu_hands, barry_idle_aim_svu, 0.000000000000001
+anm_idle_aim_moving                      = barry_idle_aim_svu_hands, barry_idle_aim_moving_svu, 0.000000000000001
+anm_idle_aim_moving_crouch               = barry_idle_aim_svu_hands, barry_idle_aim_moving_svu, 0.000000000000001
 
+;---------------------------------------------------SIGHTS---------------------------------------------------
+![wpn_svu_nimble_kobra]
+1icon_layer		= kobra_x
+1icon_layer_x                            = 90
+1icon_layer_y                            = 0
+![wpn_svu_nimble_kobra_hud]
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_nimble_kobra_hud.ogf
+        aim_hud_offset_pos               = -0.068799, 0.007238, -0.15
+        aim_hud_offset_pos_16x9          = -0.068799, 0.007238, -0.15
+        aim_hud_offset_rot               = 0.055009, 0.038299, -0.015496
+        aim_hud_offset_rot_16x9          = 0.055009, 0.038299, -0.015496
+		
+;------------------------------------------------------------------------------------------------
+[wpn_svu_nimble_ekp8_02]:wpn_svu_nimble
+hud					= wpn_svu_nimble_ekp8_02_hud
+1icon_layer                              = ekp8_02_x
+1icon_layer_x                            = 90
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.22
+
+[wpn_svu_nimble_ekp8_02_hud]:wpn_svu_nimble_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_nimble_ekp_hud.ogf
+        aim_hud_offset_pos               = -0.066675, 0.003876, -0.15
+        aim_hud_offset_pos_16x9          = -0.066675, 0.003876, -0.15
+        aim_hud_offset_rot               = 0.052432, 0.037898, -0.0184
+        aim_hud_offset_rot_16x9          = 0.052432, 0.037898, -0.0184
+		
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_nimble_okp]:wpn_svu_nimble
+hud					= wpn_svu_nimble_okp_hud
+1icon_layer                              = okp_x
+1icon_layer_x                            = 90
+1icon_layer_y                            = -2
+
+inv_weight                               = 4.22
+
+[wpn_svu_nimble_okp_hud]:wpn_svu_nimble_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_nimble_okp_hud.ogf
+        aim_hud_offset_pos               = -0.062345, 0.032609, -0.15
+        aim_hud_offset_pos_16x9          = -0.062345, 0.032609, -0.15
+        aim_hud_offset_rot               = 0.065222, 0.037831, -0.009458
+        aim_hud_offset_rot_16x9          = 0.065222, 0.037831, -0.009458
+		
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_nimble_1p76]:wpn_svu_nimble
+hud				= wpn_svu_nimble_1p76_hud
+1icon_layer			    = 1p76_x
+1icon_layer_x			= 94
+1icon_layer_y			= 6
+
+inv_weight				= 4.25
+
+[wpn_svu_nimble_1p76_hud]:wpn_svu_nimble_hud
+item_visual                	= anomaly_weapons\wpn_svu\wpn_svu_nimble_1p76_hud.ogf
+        aim_hud_offset_pos               = -0.066012, 0.018033, -0.15
+        aim_hud_offset_pos_16x9          = -0.066012, 0.018033, -0.15
+        aim_hud_offset_rot               = 0.065151, 0.038514, -0.031076
+        aim_hud_offset_rot_16x9          = 0.065151, 0.038514, -0.031076
+		
+;----------------------------------------------------------------------------------------
+[wpn_svu_nimble_1p63]:wpn_svu_nimble
+hud				= wpn_svu_nimble_1p63_hud
+1icon_layer			    = 1p63_x
+1icon_layer_x			= 97
+1icon_layer_y			= 5
+
+inv_weight				= 4.23
+
+[wpn_svu_nimble_1p63_hud]:wpn_svu_nimble_hud
+item_visual                	= anomaly_weapons\wpn_svu\wpn_svu_nimble_1p63_hud.ogf
+        aim_hud_offset_pos               = -0.066178, 0.00465, -0.15
+        aim_hud_offset_pos_16x9          = -0.066178, 0.00465, -0.15
+        aim_hud_offset_rot               = 0.064764, 0.037841, -0.042
+        aim_hud_offset_rot_16x9          = 0.064764, 0.037841, -0.042
+		
+;----------------------------------------------------------------------------------------
+[wpn_svu_nimble_pka]:wpn_svu_nimble
+hud                                      = wpn_svu_nimble_pka_hud
+1icon_layer                              = pka_x
+1icon_layer_x                            = 91
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.24
+
+[wpn_svu_nimble_pka_hud]:wpn_svu_nimble_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_nimble_pka_hud.ogf
+        aim_hud_offset_pos               = -0.056853, 0.019163, -0.18782
+        aim_hud_offset_pos_16x9          = -0.056853, 0.019163, -0.18782
+        aim_hud_offset_rot               = 0.070051, 0.034588, -0.009458
+        aim_hud_offset_rot_16x9          = 0.070051, 0.034588, -0.009458
+		
+;---------------------------------------------------SCOPES---------------------------------------------------
 ![wpn_svu_nimble_1p29]
+1icon_layer		= 1p29_x
+1icon_layer_x                            = 91
+1icon_layer_y                            = 8
         scope_zoom_factor                = 30
         scope_texture                    =	
+		scope_dynamic_zoom				 = off
 ![wpn_svu_nimble_1p29_hud]
         aim_hud_offset_pos               = -0.069073, 0.001931, -0.204555
         aim_hud_offset_pos_16x9          = -0.069073, 0.001931, -0.204555
@@ -14,10 +118,139 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.070937, 0.033261, -0.02
 		
 ![wpn_svu_nimble_ps01]
+1icon_layer		= ps01_x
+1icon_layer_x                            = 68
+1icon_layer_y                            = 2
         scope_zoom_factor                = 30
-        scope_texture                    =	
+        scope_texture                    =
+		scope_dynamic_zoom				 = off		
 ![wpn_svu_nimble_pso1_hud]
         aim_hud_offset_pos               = -0.05638, 0.021424, -0.163786
         aim_hud_offset_pos_16x9          = -0.05638, 0.021424, -0.163786
         aim_hud_offset_rot               = 0.0698, 0.033108, -0.018
         aim_hud_offset_rot_16x9          = 0.0698, 0.033108, -0.018
+
+[wpn_svu_nimble_usp1]:wpn_svu_nimble_1p29
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_nimble_1p78gs]:wpn_svu_nimble
+hud                                      = wpn_svu_nimble_1p78gs_hud
+1icon_layer                              = 1p78gs_x
+1icon_layer_x                            = 80
+1icon_layer_y                            = -2
+
+inv_weight                               = 4.42
+
+scope_status            = 1
+scope_zoom_factor       = 42.86
+zoom_rotate_time		= 0.25
+
+[wpn_svu_nimble_1p78gs_hud]:wpn_svu_nimble_hud
+item_visual                              = anomaly_weapons\wpn_svu\wpn_svu_nimble_1p78_hud.ogf
+        aim_hud_offset_pos               = -0.066085, 0.011694, -0.211637
+        aim_hud_offset_pos_16x9          = -0.066085, 0.011694, -0.211637
+        aim_hud_offset_rot               = 0.069269, 0.033464, -0.009458
+        aim_hud_offset_rot_16x9          = 0.069269, 0.033464, -0.009458
+;-----------------------------------------------------------------------------------------------------
+[wpn_svu_nimble_1pn93n2_1gs]:wpn_svu_nimble
+hud					= wpn_svu_nimble_1pn93n2_1gs_hud
+1icon_layer                              = 1pn93n2_1gs_x
+1icon_layer_x                            = 60
+1icon_layer_y                            = 7
+
+scope_status            = 1
+scope_zoom_factor       = 30
+zoom_rotate_time		= 0.25
+
+inv_weight                               = 4.85
+
+[wpn_svu_nimble_1pn93n2_1gs_hud]:wpn_svu_nimble_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_nimble_1pn93n2_hud.ogf
+        aim_hud_offset_pos               = -0.051524, 0.009782, -0.193933
+        aim_hud_offset_pos_16x9          = -0.051524, 0.009782, -0.193933
+        aim_hud_offset_rot               = 0.0697, 0.03367, -0.009458
+        aim_hud_offset_rot_16x9          = 0.0697, 0.03367, -0.009458
+;---------------------------------------------------------------------------------------------
+[wpn_svu_nimble_1pn93]:wpn_svu_nimble
+hud				= wpn_svu_nimble_1pn93_hud
+1icon_layer			    = 1pn93_x
+1icon_layer_x			= 55
+1icon_layer_y			= 6
+
+inv_weight			= 4.73
+
+scope_status            = 1
+scope_zoom_factor       = 30
+zoom_rotate_time		= 0.25
+scope_dynamic_zoom		= on
+
+[wpn_svu_nimble_1pn93_hud]:wpn_svu_nimble_hud
+item_visual                	= anomaly_weapons\wpn_svu\wpn_svu_nimble_1pn93_hud.ogf
+        aim_hud_offset_pos               = -0.055303, 0.001823, -0.197205
+        aim_hud_offset_pos_16x9          = -0.055303, 0.001823, -0.197205
+        aim_hud_offset_rot               = 0.069411, 0.033456, -0.009458
+        aim_hud_offset_rot_16x9          = 0.069411, 0.033456, -0.009458	
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_nimble_pso2]:wpn_svu_nimble
+hud                                      = wpn_svu_nimble_pso2_hud
+
+1icon_layer                              = pso2_x
+1icon_layer_x                            = 80
+1icon_layer_y                            = 1
+
+inv_weight                               = 4.45
+
+scope_status            = 1
+scope_zoom_factor       = 30
+zoom_rotate_time		= 0.25
+
+[wpn_svu_nimble_pso2_hud]:wpn_svu_nimble_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_nimble_pso2_hud.ogf
+        aim_hud_offset_pos               = -0.053915, 0.020439, -0.18284
+        aim_hud_offset_pos_16x9          = -0.053915, 0.020439, -0.18284
+        aim_hud_offset_rot               = 0.070029, 0.031872, -0.009458
+        aim_hud_offset_rot_16x9          = 0.070029, 0.031872, -0.009458
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_nimble_1p59]:wpn_svu_nimble
+hud                                      = wpn_svu_nimble_1p59_hud
+
+1icon_layer                              = 1p59_x
+1icon_layer_x                            = 92
+1icon_layer_y                            = -1
+
+inv_weight                               = 4.75
+
+scope_status            = 1
+scope_zoom_factor       = 12
+min_scope_zoom_factor	= 45	
+zoom_rotate_time		= 0.25
+scope_dynamic_zoom		= on
+
+[wpn_svu_nimble_1p59_hud]:wpn_svu_nimble_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_nimble_1p59_hud.ogf
+	    aim_hud_offset_pos               = -0.051835, 0.011632, -0.221813
+        aim_hud_offset_pos_16x9          = -0.051835, 0.011632, -0.221813
+        aim_hud_offset_rot               = 0.068839, 0.033657, -0.009458
+        aim_hud_offset_rot_16x9          = 0.068839, 0.033657, -0.009458	
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_nimble_pso1m21]:wpn_svu_nimble
+hud                                      = wpn_svu_nimble_pso1m21_hud
+
+1icon_layer                              = pso1m21_x
+1icon_layer_x                            = 80
+1icon_layer_y                            = 1
+
+inv_weight                               = 4.75
+
+scope_status            = 1
+scope_zoom_factor       = 20
+zoom_rotate_time		= 0.25
+
+[wpn_svu_nimble_pso1m21_hud]:wpn_svu_nimble_hud
+
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_nimble_pso1m21_hud.ogf
+        aim_hud_offset_pos               = -0.053786, 0.021123, -0.18284
+        aim_hud_offset_pos_16x9          = -0.053786, 0.021123, -0.18284
+        aim_hud_offset_rot               = 0.069651, 0.032824, -0.025
+        aim_hud_offset_rot_16x9          = 0.069651, 0.032824, -0.025	
+
+;
