--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_m4_ru556.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_m4_ru556.ltx
@@ -149,11 +149,16 @@ anm_shots              		 	= mka_sh_fire_3dss, mka_sh_fire
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_m4_ru556_leupold_hud]
-        aim_hud_offset_pos               = -0.072947, 0.011253, -0.02242
-        aim_hud_offset_pos_16x9          = -0.072947, 0.011253, -0.02242
-        aim_hud_offset_rot               = 0.008143, -0.063024, 0
-        aim_hud_offset_rot_16x9          = 0.008143, -0.063024, 0
-		
+        hands_orientation                = -0.3, -0.92, 4.5
+        hands_orientation_16x9           = -0.3, -0.92, 4.5
+        hands_position                   = -0.004, 0.019, -0.02
+        hands_position_16x9              = -0.004, 0.019, -0.02
+
+        aim_hud_offset_pos               = -0.057742, 0.011138, -0.019272
+        aim_hud_offset_pos_16x9          = -0.057742, 0.011138, -0.019272
+        aim_hud_offset_rot               = 0.00748, 0.001806, 0
+        aim_hud_offset_rot_16x9          = 0.00748, 0.001806, 0
+
         aim_hud_offset_alt_pos           = -0.083082, -0.045139, -0.02
         aim_hud_offset_alt_pos_16x9      = -0.083082, -0.045139, -0.02
         aim_hud_offset_alt_rot           = 0.00448, 0.006357, 0.785
