--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_m4_tac.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_3dss_m4_tac.ltx
@@ -8,7 +8,7 @@ lewd_lens_hide_bone          = muzzle_gl
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
 
-;---------------------------------------------------SIGHTS---------------------------------------------------
+;------------------------------------- --------------SIGHTS---------------------------------------------------
 ![wpn_m4_tac_0kp2]
 1icon_layer		= 0kp2_x
 1icon_layer_y	= -4
@@ -232,9 +232,9 @@ item_visual				= dynamics\weapons\wpn_m4_tac\wpn_m4_tac_he510_hud.ogf
         aim_hud_offset_alt_rot_16x9      = -0.002307, -0.007022, 0.78
 		
 ![wpn_m4_tac_pn23]
-1icon_layer		= pn23_x
-1icon_layer_x			= 56
-1icon_layer_y			= -16
+1icon_layer		= pn23f
+1icon_layer_x			= 64
+1icon_layer_y			= -12
         scope_zoom_factor                = 20
         scope_texture                    =
 		nv_scope_status 				 = 0
@@ -291,8 +291,8 @@ item_visual				= dynamics\weapons\wpn_m4_tac\wpn_m4_tac_he510_hud.ogf
 hud                                      = wpn_m4_tac_gee36_hud
 
 1icon_layer				= gee36_x
-1icon_layer_x			= 79
-1icon_layer_y			= -12
+1icon_layer_x			= 77
+1icon_layer_y			= -13
 
 inv_weight              = 3.6
 zoom_rotate_time        = 0.25
