--- a/3D Shader Scopes for GAMMA/gamedata/configs/items/trade/presets/nato_new_sights_preset.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/items/trade/presets/nato_new_sights_preset.ltx
@@ -14,6 +14,8 @@ lco1						= 1, 1
 monstrum					= 1, 1
 trihawk						= 1, 1
 vulcan						= 1, 1
+c79							= 1, 1
+bossxe						= 1, 1
 
 ![supplies_4]
 bravo4						= 1, 1
@@ -21,10 +23,13 @@ hamr						= 1, 1
 march_f_shorty				= 1, 0.75
 tac30						= 1, 0.75
 ado							= 1, 0.75
-	
+t12							= 1, 0.15
+skeet						= 1, 0.3
+
 ![supplies_5]
 razorhd						= 1, 0.70
 uh1_magd					= 1, 0.75
 e0t2_magd					= 1, 0.75
 march_f_shorty_alt			= 1, 0.70
 devo						= 1, 0.75
+echo1						= 1, 0.2
