--- a/3D Shader Scopes for GAMMA/gamedata/configs/items/trade/presets/wp_new_sights_preset.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/items/trade/presets/wp_new_sights_preset.ltx
@@ -1,17 +1,24 @@
 ![supplies_2]
-pk1								= 1, 1
-side							= 1, 1
-gee36							= 1, 1
-1p63							= 1, 1
+pk1							= 1, 1
+side						= 1, 1
+gee36						= 1, 1
+1p63						= 1, 1
 
 ![supplies_3]
-pk6								= 1, 1
-p1x42							= 1, 1
-1p87 							= 1, 1
-vulcan							= 1, 1
+pk6							= 1, 1
+p1x42						= 1, 1
+1p87 						= 1, 1
+vulcan						= 1, 1
+c79							= 1, 1
 
 ![supplies_4]
-ps320							= 1, 0.75
+ps320						= 1, 0.75
+t12							= 1, 0.15
+tac30						= 1, 0.75
+ado							= 1, 0.75
+skeet						= 1, 0.3
 
 ![supplies_5]
-
+razorhd						= 1, 0.70
+march_f_shorty				= 1, 0.75
+echo1						= 1, 0.2
